--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "bsb -make-world -w -ws _ ",
     "clean": "bsb -clean-world",
     "server": "moduleserve ./ --port 8000",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:css": "postcss assets/tailwind.css -o assets/main.css"
   },
   "keywords": [
     "BuckleScript",
@@ -20,12 +21,16 @@
     "bs-css": "^12.0.1",
     "bs-css-emotion": "^1.0.1",
     "bs-fetch": "^0.5.2",
+    "re-tailwind": "^0.0.6",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "reason-react": ">=0.7.0"
+    "reason-react": ">=0.7.0",
+    "tailwindcss": "^1.2.0"
   },
   "devDependencies": {
+    "autoprefixer": "^9.7.4",
     "bs-platform": "^7.2.0",
-    "moduleserve": "^0.9.0"
+    "moduleserve": "^0.9.0",
+    "postcss-cli": "^7.1.0"
   }
 }
